--- a/css/style.scss
+++ b/css/style.scss
@@ -1,66 +1,78 @@
+$whiteText: rgb(252, 249, 249);
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
 body{
+
     background-color: rgb(255, 255, 255);
     height: 100%;
     width: 100%;
 }
 
-nav{
-    position: absolute;
-    z-index: 1;
-    font-family: 'Raleway', sans-serif;
-    color: white;
+.galleryContainer {
+}
+
+.navbarContainer{
+    background-color: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
     width: 100%;
-    height: 200px;
-    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
-    ul{
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        list-style-type: none;
-        font-weight: 200px;
-        font-style: bold;
-        height: 20px;
-        padding-top: 20px;
-        padding-bottom: 10px;
-        text-shadow: 0px 2px 20px white;
-        cursor: pointer;
-        .listItems:hover{
-            height: 20px;
-            transition: height 3s ease;
-        }
-    }
-    
-    .shadowMask{
-        position: relative;
-        box-shadow: 0 20px 20px 100px rgba(0,0,0,.2);
-        z-index: 1;
-    }
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
+.listItems{
+    top: 0;
+    left: 0;
+    padding: 20px 100px 0 100px ;
+    margin: auto;
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Raleway', sans-serif;
+    list-style-type: none;
+    color: $whiteText; 
 
 }
+.listItems a{
+    display: inline-block;
+    cursor: pointer;
+    font-weight: bold;
+    list-style-type: none;
+    text-decoration: none;
+    color: inherit;
+    // inherit turns the purple text by default of a link
+}
+.listItems a:hover{
+    font-size: 18px;
+    cursor: pointer;
+    transition: font-size 0.2s ease-in-out;
+    width: auto;
+}
+
 
 .gallery{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     // grid-column-gap: 2px;
     // grid-row-gap: 2px;
+    position: relative;
 }
 .gallery img{
-    filter: brightness(95%);
-    display: flex;
-    max-width: 100%;
-    position: relative;
-    
+    filter: brightness(93%);
+    max-width: 100%; 
+    // opacity: 1;
+    z-index: -1;
+
 } 
 
 .gallery img:hover{
-        cursor: pointer;
         box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
         filter: grayscale(100%);
         filter: brightness(40%);
@@ -71,32 +83,51 @@ nav{
     width: 100%;
     height: 400px;
     display: flex;
-    position: absolute;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: absolute;
 
     .textContainer{
         width: 50%;
         height: 200px;
-        position: relative;
-        z-index: 1;
         position: fixed;
-
         h1{
         font-family: 'Raleway', sans-serif;
         position: relative;
-        color: rgb(252, 249, 249);
+        color: $whiteText; 
+        // color: black;
         text-shadow: 3px 2px 40px black;
         align-items: center;
-        
     }
         p {
         font-family: 'Raleway', sans-serif;
         position: absolute;
         width: 80%;
-        color: white;
+        color: $whiteText;
         }
     }
+    
 }
+
+footer{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    height: 98%;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+}
+.footerTextContainer{
+    
+    #footerText{
+    color: $whiteText;
+    font-style: italic;
+    font-family: 'Raleway', sans-serif;
+    justify-content: center;
+    align-items: center;
+    }
+}
+
 
