--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,13 @@
 
 body {
   background-color: white;
-  height: 100%;
   width: 100%;
 }
 
 .navbarContainer {
   background-color: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0) 100%);
   width: 100%;
-  height: 100%;
+  min-height: 350vh;
   z-index: 1;
   top: 0;
   left: 0;
@@ -37,6 +36,7 @@ body {
   font-family: 'Raleway', sans-serif;
   list-style-type: none;
   color: #fcf9f9;
+  z-index: 5;
 }
 
 .listItems a {
@@ -107,7 +107,6 @@ body {
   height: 200px;
   position: fixed;
   z-index: 1;
-  cursor: pointer;
 }
 
 .titleBox .textContainer h1 {
@@ -129,7 +128,6 @@ body {
 }
 
 .titleBox .textContainer:hover {
-  position: relative;
   font-size: 18px;
   -webkit-transition: font-size 1s ease-in-out;
   transition: font-size 1s ease-in-out;
