--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,6 @@ $whiteText: rgb(252, 249, 249);
 body{
 
     background-color: rgb(255, 255, 255);
-    height: 100%;
     width: 100%;
 }
 
@@ -20,7 +19,7 @@ body{
 .navbarContainer{
     background-color: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
     width: 100%;
-    height: 100%;
+    min-height: 350vh;
     z-index: 1;
     top: 0;
     left: 0;
@@ -38,6 +37,7 @@ body{
     font-family: 'Raleway', sans-serif;
     list-style-type: none;
     color: $whiteText; 
+    z-index: 5;
 
 }
 .listItems a{
@@ -92,7 +92,6 @@ body{
         height: 200px;
         position: fixed;
         z-index: 1;
-        cursor: pointer;
        
         h1{
         font-family: 'Raleway', sans-serif;
@@ -111,7 +110,7 @@ body{
         }
     }
     .textContainer:hover{
-        position: relative;
+        
         font-size: 18px;
         transition: font-size 1s ease-in-out;
     }
