--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,30 @@ body {
   width: 100%;
 }
 
-.navbarContainer {
-  background-color: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0) 100%);
+.galleryContainer {
+  position: relative;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
-  min-height: 350vh;
-  z-index: 1;
   top: 0;
-  left: 0;
+}
+
+.navbarContainer {
   position: absolute;
+  z-index: 5;
+  width: 100%;
 }
 
 .listItems {
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   left: 0;
   padding: 20px 100px 0 100px;
-  margin: auto;
-  position: -webkit-sticky;
-  position: sticky;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -36,7 +43,6 @@ body {
   font-family: 'Raleway', sans-serif;
   list-style-type: none;
   color: #fcf9f9;
-  z-index: 5;
 }
 
 .listItems a {
@@ -47,27 +53,32 @@ body {
   color: inherit;
 }
 
-.listItems a:hover {
-  font-size: 18px;
-  cursor: pointer;
-  -webkit-transition: font-size 0.2s ease-in-out;
-  transition: font-size 0.2s ease-in-out;
-  width: auto;
+.listItems a:hover, .textContainer:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.imageContainer {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(450px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  position: absolute;
 }
 
 .gallery {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(500px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   position: relative;
+  height: 100%;
 }
 
 .gallery img {
-  -webkit-filter: brightness(93%);
-          filter: brightness(93%);
+  z-index: 2;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
   max-width: 100%;
-  z-index: -1;
 }
 
 .gallery img:hover {
@@ -75,20 +86,18 @@ body {
           box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
-  -webkit-filter: brightness(40%);
-          filter: brightness(40%);
-  -webkit-transition: -webkit-filter 3s ease;
-  transition: -webkit-filter 3s ease;
-  transition: filter 3s ease;
-  transition: filter 3s ease, -webkit-filter 3s ease;
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
+  -webkit-transition: -webkit-filter 3s ease-in-out;
+  transition: -webkit-filter 3s ease-in-out;
+  transition: filter 3s ease-in-out;
+  transition: filter 3s ease-in-out, -webkit-filter 3s ease-in-out;
 }
 
-.titleBox {
+.textArea {
+  z-index: 3;
   width: 100%;
-  height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -96,71 +105,69 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
+.titleBox {
+  top: 200px;
+  margin: 0 20px 0 0;
+  position: fixed;
+  width: 400px;
 }
 
 .titleBox .textContainer {
-  width: 50%;
-  height: 200px;
-  position: fixed;
-  z-index: 1;
+  width: 450px;
+  text-shadow: 3px 2px 40px black;
+  font-size: 20px;
 }
 
 .titleBox .textContainer h1 {
   font-family: 'Raleway', sans-serif;
-  position: relative;
   color: #fcf9f9;
-  text-shadow: 3px 2px 40px black;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: auto;
 }
 
 .titleBox .textContainer p {
+  mix-blend-mode: screen;
   font-family: 'Raleway', sans-serif;
-  position: absolute;
-  width: 80%;
   color: #fcf9f9;
 }
 
-.titleBox .textContainer:hover {
-  font-size: 18px;
-  -webkit-transition: font-size 1s ease-in-out;
-  transition: font-size 1s ease-in-out;
+.titleBox .textContainer p:hover {
+  font-weight: 500px;
+  text-shadow: 40px 40px 20px 40x black;
 }
 
-footer {
+.textBelow {
+  position: absolute;
   width: 100%;
+  z-index: 2;
+  height: 8vh;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: absolute;
-  height: 98%;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footerTextContainer #footerText {
-  color: #fcf9f9;
-  font-style: italic;
-  font-family: 'Raleway', sans-serif;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  color: #fcf9f9;
+  font-style: italic;
+  font-family: 'Raleway', sans-serif;
+}
+
+.footerContainer {
+  position: absolute;
+  margin: auto 0 auto 0;
+}
+
+@media screen and (max-width: 500px) {
+  .navbarContainer {
+    min-height: 270vh;
+  }
 }
 /*# sourceMappingURL=style.css.map */
