--- a/css/style.scss
+++ b/css/style.scss
@@ -14,33 +14,36 @@ body{
 }
 
 .galleryContainer {
+    position: relative;
+    justify-content: space-evenly;
+    display: flex;
+    width: 100%;
+    top: 0;
 }
 
 .navbarContainer{
-    background-color: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
-    width: 100%;
-    min-height: 350vh;
-    z-index: 1;
-    top: 0;
-    left: 0;
     position: absolute;
+    z-index: 5;
+    // background-color: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+    width: 100%;
+    // position: sticky;
 }
 
 .listItems{
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
     left: 0;
     padding: 20px 100px 0 100px ;
-    margin: auto;
-    position: sticky;
     display: flex;
     justify-content: space-between;
     font-family: 'Raleway', sans-serif;
     list-style-type: none;
     color: $whiteText; 
-    z-index: 5;
-
 }
+
 .listItems a{
+    
     display: inline-block;
     font-weight: bold;
     list-style-type: none;
@@ -48,92 +51,121 @@ body{
     color: inherit;
     // inherit turns the purple text by default of a link
 }
-.listItems a:hover{
-    font-size: 18px;
-    cursor: pointer;
-    transition: font-size 0.2s ease-in-out;
-    width: auto;
+.listItems a:hover, .textContainer:hover{
+    transform: scale(1.1);
+    transition: all .5s ease-in-out;
 }
 
-
-.gallery{
+.imageContainer{
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     // grid-column-gap: 2px;
     // grid-row-gap: 2px;
+    // min-height: 170vh;
+    position: absolute;
+}
+.gallery{
     position: relative;
+    height: 100%;
 }
 .gallery img{
-    filter: brightness(93%);
+    z-index: 2;
+    filter: brightness(50%);
     max-width: 100%; 
     // opacity: 1;
-    z-index: -1;
-
 } 
 
 .gallery img:hover{
         box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
         filter: grayscale(100%);
-        filter: brightness(40%);
-        transition: filter 3s ease;
+        filter: brightness(90%);
+        transition: filter 3s ease-in-out;
+}
+
+
+.textArea{
+    z-index: 3;
+    width: 100%;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    height: 100%;
 }
 
 .titleBox{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
+    
+    top: 200px;
+    margin: 0 20px 0 0;
 
+    position: fixed;
+    width: 400px;
     .textContainer{
-        width: 50%;
-        height: 200px;
-        position: fixed;
-        z-index: 1;
+        width: 450px;
+//         height: 200px;
+        text-shadow: 3px 2px 40px black;
+        font-size: 20px;
        
         h1{
         font-family: 'Raleway', sans-serif;
-        position: relative;
+//         position: relative;
         color: $whiteText; 
-        // color: black;
-        text-shadow: 3px 2px 40px black;
+//         // color: black;
         align-items: center;
-        z-index: auto;
     }
-        p {
-        font-family: 'Raleway', sans-serif;
-        position: absolute;
-        width: 80%;
-        color: $whiteText;
-        }
-    }
-    .textContainer:hover{
         
-        font-size: 18px;
-        transition: font-size 1s ease-in-out;
+            p {
+            mix-blend-mode: screen;
+
+                // position: absolute;
+            font-family: 'Raleway', sans-serif;
+    //         position: absolute;
+    //         width: 80%;
+            color: $whiteText;
+            }
+        
+        
+    }
+    .textContainer p:hover{
+        font-weight: 500px;
+
+        text-shadow: 40px 40px 20px 40x black;
+    //     transform: scale(1.0);
+    //     transition: all 1s ease-in-out;
     }
 }
 
-footer{
-    width: 100%;
-    display: flex;
-    position: absolute;
-    height: 98%;
-    justify-content: flex-end;
-    flex-direction: column;
-    align-items: center;
-}
-.footerTextContainer{
+.textBelow{
     
-    #footerText{
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+    height: 8vh;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    // margin: 0 0 20px 0;
     color: $whiteText;
     font-style: italic;
     font-family: 'Raleway', sans-serif;
-    justify-content: center;
-    align-items: center;
-    }
+
+}
+
+.footerContainer{
+    position: absolute;
+    margin: auto 0 auto 0;
+
+//     #footerText{
+//     
+//     }
 }
 
 
+@media screen and (max-width: 500px) {
+	.navbarContainer{
+        min-height: 270vh;
+    }
+    .textoFooter{
+    }
+}
